--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.26.1",
     "element-plus": "^2.1.10",
     "vue": "^3.2.25",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
